<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#212121"
    android:padding="32dp">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="76dp"
        tools:context=".views.LoginActivity">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_card"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingTop="32dp"
                android:paddingRight="40dp"
                android:paddingBottom="64dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/svg_vsafe"/>

                <EditText
                    android:id="@+id/text_userlogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/montserrat"
                    android:textSize="16sp"
                    android:hint="@string/txt_usuario"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="#FFF"
                    android:textCursorDrawable="@drawable/custom_cursor_red" />

                <EditText
                    android:id="@+id/text_userpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_key_password"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/montserrat"
                    android:textSize="16sp"
                    android:hint="@string/txt_pass"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="#FFF"
                    android:textCursorDrawable="@drawable/custom_cursor_red" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="4dp"
                    android:layout_marginTop="32dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:text="@string/btn_text_register" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center|bottom"
                    android:textColor="#fff"
                    android:textSize="12sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>




    </LinearLayout>
</ScrollView>